<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".general.presenter.weather.ui.GeneralFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/location_toolbar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:contentDescription="@string/location"
            android:minWidth="32dp"
            android:minHeight="32dp"
            android:src="@drawable/ic_outline_location_on_24"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/toolbar_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_wb_sunny_24"
                android:background="@drawable/round_corner"
                android:minWidth="32dp"
                android:minHeight="32dp"
                android:contentDescription="@string/themes_mode"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"/>

            <ImageButton
                android:id="@+id/search_toolbar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_search_24"
                android:background="@drawable/round_corner"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:contentDescription="@string/search"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/general_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"/>
</FrameLayout>