<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.GeneralTodayFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/today_card_layout_bg"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="32dp">
            <TextView
                android:id="@+id/date_today_expanded_card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Сегодня 12 августа, чт"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textAlignment="center"/>


            <ImageView
                android:id="@+id/icon_today_card_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/weather_icon"/>

            <TextView
                android:id="@+id/temp_today_expanded_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30°"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/desc_today_expanded_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Ясно, ощущается как 32°"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="24dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/wind_today_expanded_card_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            android:text="32"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="м/с"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="24dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/humidity_today_expanded_card_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            android:text="32"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="%"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precipitation"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/precipitation_today_expanded_card_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            android:text="32"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="%"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</FrameLayout>